# CRS_RELOADED

./: .gitignore  .replit  Crop Classification With Recommendation System.ipynb  README.md  SETUP.md  app_enhanced.py  minmaxscaler.pkl  model.pkl  pyproject.toml  replit.md  st_app.py
.streamlit/: config.toml
utils/: firebase_auth.py  forum.py  translations.py  weather.py
